make right register for X-Api-Key Header
